[package]
name = "night-watch"
version = "0.1.0"
authors = ["Adrian Kumpf"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "env", "cargo"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
tokio = { version = "1.50.0", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
